generators/bbd/crackle/IDL.java
/* Generated By:JavaCC: Do not edit this line. IDL.java */
package bbd.crackle;

import java.util.*;
import java.io.*;

/**
* YET ANOTHER INTERFACE DEFINITION LANGUAGE
* Actually this started out as an IDL but ended up
* as a remote server C++ code compiler. It still can be
* used as an IDL
*/
public class IDL implements IDLConstants {
  protected static Module     module;
  protected static Structure  structure;
  protected static Enumerator enumerator;
  protected static Prototype  prototype;
  protected static Message    message;
  protected static Table      table;
  protected static Field      field;
  protected static Type       type;
  protected static Operation  operation;
  protected static Action     action;
  protected static Vector<Integer>     messageNos;
  static private   IDL parser;
  /**
  * Reads input from standard input
  */
  public static void main(String args[])
  {
    try
    {
      PrintWriter outLog = new PrintWriter(System.out);
      for (int i = 0; i <args.length; i++)
      {
        System.out.println(args[i]+": Parsing ...");
        Module module = run(args[i], outLog);
        System.out.println("Outputting "+module.name+".repository");
        ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(module.name+".repository"));
        out.writeObject(module);
        out.close();
      }
    }
    catch (Exception e)
    {
      e.printStackTrace();
    }
  }
  /**
  * Reads input from supplied file
  * @param  inFile is the input file to parse
  * @return Module from IDL package
  */
  public static Module run(String inFile, PrintWriter outLog)
  {
    try
    {
      FileReader inputReader = new FileReader(inFile);
      return run(inFile, inputReader, outLog);
    }
    catch (FileNotFoundException e)
    {
      e.printStackTrace();
      return null;
    }
  }
  public static Module run(String inFile, Reader reader, PrintWriter outLog)
  {
    try
    {
      parser = new IDL(reader);
      messageNos = new Vector<Integer>();
      parser.idlStart();
      module.sourceName = inFile;
      return module;
    }
    catch (Exception e)
    {
      outLog.println("ParseException ["+e.getMessage()+"]");
      e.printStackTrace();
      return null;
    }
  }
  static String uniqueNumber()
  {
    int procNumber = Module.hashCode(prototype.name);
    if (procNumber < 0)
      procNumber *= -1;
    Integer newNo;
    incProcNumber: for (;; procNumber++)
    {
      for (int i=0; i<messageNos.size(); i++)
      {
        Integer n = (Integer)messageNos.elementAt(i);
        if (n.intValue() == procNumber)
          continue incProcNumber;
      }
      newNo = new Integer(procNumber);
      messageNos.addElement(newNo);
      break;
    }
    return newNo.toString();
  }

  final public void idlStart() throws ParseException {
  Token t;
  String s;
  boolean hasLinemarker = false;
    jj_consume_token(MODULE);
    t = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    module = new Module();
    module.name = t.image;
    module.hash(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PACKAGE:
      jj_consume_token(PACKAGE);
      s = idlPackage();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        jj_consume_token(50);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      module.packageName = s;
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VERSION:
      jj_consume_token(VERSION);
      t = jj_consume_token(QSTRING);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        jj_consume_token(50);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      module.version = t.image;
      module.hash(t.image);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case BYTE:
      case CHAR:
      case DOUBLE:
      case ENUM:
      case FLOAT:
      case MODULE:
      case INT:
      case INT8:
      case INT16:
      case INT32:
      case INT64:
      case LONG:
      case MESSAGE:
      case SHORT:
      case STRING:
      case STRING2:
      case STRUCT:
      case TABLE:
      case UNSIGNED:
      case VOID:
      case WCHAR:
      case PRIVATE:
      case PROTECTED:
      case PUBLIC:
      case PRAGMA:
      case IDENTIFIER:
      case LINENO:
      case CODELINE:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LINENO:
      case CODELINE:
        idlCodeBlock();
        break;
      default:
        jj_la1[6] = jj_gen;
        if (jj_2_1(2)) {
          idlStructure();
      module.structures.addElement(structure);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ENUM:
            idlEnum();
      module.enumerators.addElement(enumerator);
            break;
          default:
            jj_la1[7] = jj_gen;
            if (jj_2_2(2)) {
              idlPrototype();
      module.prototypes.addElement(prototype);
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case MESSAGE:
                idlMessage();
                break;
              case TABLE:
                idlTable();
      module.tables.addElement(table);
                break;
              case PRAGMA:
                t = jj_consume_token(PRAGMA);
      s = t.image;
      module.pragmas.addElement(s.substring(6));
                break;
              case MODULE:
                idlSubModule();
                break;
              default:
                jj_la1[8] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    }
  }

  final public void idlSubModule() throws ParseException {
    jj_consume_token(MODULE);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  final public String idlPackage() throws ParseException {
  Token t;
  String s;
    t = jj_consume_token(IDENTIFIER);
    s = t.image;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_2;
      }
      jj_consume_token(51);
      t = jj_consume_token(IDENTIFIER);
      s = s+"."+t.image;
    }
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public void idlCodeBlock() throws ParseException {
  Token t;
  boolean hasLinemarker = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LINENO:
      t = jj_consume_token(LINENO);
    if (module.codeStart == 0)
      module.codeStart = t.beginLine;
    hasLinemarker = true;
      module.code.addElement(t.image);
      break;
    case CODELINE:
      t = jj_consume_token(CODELINE);
    if (module.codeStart == 0)
      module.codeStart = t.beginLine;
    if (module.codeLine == 0 && hasLinemarker == false)
      module.codeLine = t.beginLine;
    module.code.addElement(t.image);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void idlMessage() throws ParseException {
  Token t;
  String s;
  Integer i;
    t = jj_consume_token(MESSAGE);
    if (module.messageStart == 0)
      module.messageStart = t.beginLine;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 52:
      jj_consume_token(52);
      t = jj_consume_token(INTEGER);
      jj_consume_token(53);
      s = t.image;
      i = new Integer(s);
      module.messageBase = i.intValue();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(54);
    label_3:
    while (true) {
      idlMsgElement();
      module.messages.addElement(message);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(55);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  final public void idlMsgElement() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
    message = new Message();
    message.name = t.image;
    module.hash(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 56:
      jj_consume_token(56);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    t = jj_consume_token(QSTRING);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    message.value = t.image;
  }

  final public void idlTable() throws ParseException {
  Token t;
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
    table = new Table();
    table.name = t.image;
    jj_consume_token(54);
    label_4:
    while (true) {
      idlMsgElement();
      table.messages.addElement(message);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(55);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

  final public void idlEnum() throws ParseException {
  Token t;
    jj_consume_token(ENUM);
    t = jj_consume_token(IDENTIFIER);
    enumerator = new Enumerator();
    enumerator.name = t.image;
    module.hash(t.image);
    jj_consume_token(54);
    idlEnumElement();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 57:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_5;
      }
      jj_consume_token(57);
      idlEnumElement();
    }
    jj_consume_token(55);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  final public void idlEnumElement() throws ParseException {
  Token t;
  String s;
    t = jj_consume_token(IDENTIFIER);
    s = t.image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 56:
      jj_consume_token(56);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        t = jj_consume_token(INTEGER);
        break;
      case CHARACTER:
        t = jj_consume_token(CHARACTER);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      s = s + " = " + t.image;
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    enumerator.elements.addElement(s);
  }

  final public void idlStructure() throws ParseException {
  Token t;
  boolean hasLinemarker = false;
    structure = new Structure();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIVATE:
    case PROTECTED:
    case PUBLIC:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIVATE:
        jj_consume_token(PRIVATE);
      structure.codeType = Structure.PRIVATE;
        break;
      case PUBLIC:
        jj_consume_token(PUBLIC);
      structure.codeType = Structure.PUBLIC;
        break;
      case PROTECTED:
        jj_consume_token(PROTECTED);
      structure.codeType = Structure.PROTECTED;
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(STRUCT);
    t = jj_consume_token(IDENTIFIER);
    structure.name = t.image;
    structure.start = t.beginLine;
    module.hash(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QSTRING:
      t = jj_consume_token(QSTRING);
      structure.header = t.image;
      module.hash(t.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        t = jj_consume_token(IDENTIFIER);
        jj_consume_token(53);
        structure.categories.addElement(t.image);
        module.hash(t.image);
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case DOUBLE:
        case FLOAT:
        case INT:
        case INT8:
        case INT16:
        case INT32:
        case INT64:
        case LONG:
        case SHORT:
        case STRING:
        case STRING2:
        case UNSIGNED:
        case VOID:
        case WCHAR:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_6;
        }
        idlFielddef();
        jj_consume_token(50);
        structure.fields.addElement(field);
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LINENO:
        case CODELINE:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LINENO:
          t = jj_consume_token(LINENO);
      hasLinemarker = true;
      structure.code.addElement(t.image);
          break;
        case CODELINE:
          t = jj_consume_token(CODELINE);
        if (structure.codeLine == 0 && hasLinemarker == false)
          structure.codeLine = t.beginLine;
        structure.code.addElement(t.image);
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(55);
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
  }

  final public void idlFielddef() throws ParseException {
  Token t;
    field = new Field();
    type  = field.type;
    idlType();
    t = jj_consume_token(IDENTIFIER);
    field.name = t.image;
    module.hash(t.image);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_8;
      }
      idlArrayStuff();
    }
  }

  final public void idlType() throws ParseException {
    idlTypeLookup();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POINTER:
    case POINTERREF:
    case 58:
      idlAccessType();
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
  }

  final public void idlAccessType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POINTERREF:
      jj_consume_token(POINTERREF);
    module.hash("*&");
    type.reference = Type.BYREFPTR;
      break;
    case POINTER:
      jj_consume_token(POINTER);
    module.hash("*");
    type.reference = Type.BYPTR;
      break;
    case 58:
      jj_consume_token(58);
      jj_consume_token(59);
    module.hash("[]");
    type.reference = Type.ARRAYED;
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void idlTypeLookup() throws ParseException {
  Token t;
    idlUnsigned();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      type.name = "boolean";
      module.hash(type.name);
      type.typeof = Type.BOOLEAN;
      break;
    case CHAR:
      jj_consume_token(CHAR);
      type.name = "char";
      module.hash(type.name);
      type.typeof = Type.CHAR;
      break;
    case WCHAR:
      jj_consume_token(WCHAR);
      type.name = "wchar_t";
      module.hash(type.name);
      type.typeof = Type.WCHAR;
      break;
    case STRING:
    case STRING2:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        jj_consume_token(STRING);
        break;
      case STRING2:
        jj_consume_token(STRING2);
        break;
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      type.name = "string";
      module.hash(type.name);
      type.typeof = Type.STRING;
      break;
    case BYTE:
    case INT8:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BYTE:
        jj_consume_token(BYTE);
        break;
      case INT8:
        jj_consume_token(INT8);
        break;
      default:
        jj_la1[36] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      type.name = "byte";
      module.hash(type.name);
      type.typeof = Type.BYTE;
      break;
    case INT16:
    case SHORT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SHORT:
        jj_consume_token(SHORT);
        break;
      case INT16:
        jj_consume_token(INT16);
        break;
      default:
        jj_la1[37] = jj_gen;
        jj_consume_token(-1);
